--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,2 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<center>Cyber Crime Motives - India - 2013</center>
+<svg width="960" height="960" class="hierarchyBubbleChart"></svg>
