--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,9 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+    <li><a href="#!/view1">Bubble Chart</a></li>
+    <li><a href="#!/view2">Hierarchical Bubble Chart</a></li>
+    <li><a href="#!/view3">Multilevel Bubble Chart</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -26,18 +27,17 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/d3/d3.min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+  <script src="view3/view3.js"></script>
+  <script src="view3/topicTree.js"></script>
+  <script src="view3/controller.js"></script>
 </body>
 </html>
